@@ -1236,7 +1236,8 @@ help Spamfilter {
 	" Use: /spamfilter [add|del|remove|+|-] [type] [action] [tkltime] [reason] [regex]";
 	" [type]    specifies the target type, you can specify multiple targets:";
 	"           'c' channel msg, 'p' private msg, 'n' private notice,";
-	"           'N' channel notice, 'P' part msg, 'q' quit msg, 'd' dcc";
+	"           'N' channel notice, 'P' part msg, 'q' quit msg, 'd' dcc,";
+	"           'u' user (nick!user@host:realname ban)";
 	" [action]  specifies the action to be taken (only 1 action can be specified):";
 	"           'kill', 'tempshun' (only shun current session), 'shun',";
 	"           'kline', 'gline', 'zline', 'gzline', 'block' (blocks the msg),";
