@@ -705,3 +705,6 @@ extern int del_dccallow(aClient *sptr, aClient *optr);
 extern void delete_linkblock(ConfigItem_link *link_ptr);
 extern void delete_classblock(ConfigItem_class *class_ptr);
 extern void del_async_connects(void);
+extern int find_spamfilter_user(aClient *sptr);
+extern void make_extbanstr(void);
+extern void isupport_init(void);
