@@ -987,6 +987,7 @@ int flags = 0;
 			case 'P': flags |= SPAMF_PART; break;
 			case 'q': flags |= SPAMF_QUIT; break;
 			case 'd': flags |= SPAMF_DCC; break;
+			case 'u': flags |= SPAMF_USER; break;
 			default:
 				if (sptr)
 				{
@@ -1017,6 +1018,8 @@ int flags = 0;
 		return SPAMF_QUIT;
 	if (!strcmp(s, "dcc"))
 		return SPAMF_DCC;
+	if (!strcmp(s, "user"))
+		return SPAMF_USER;
 	return 0;
 }
 
@@ -1039,6 +1042,8 @@ char *p = buf;
 		*p++ = 'q';
 	if (v & SPAMF_DCC)
 		*p++ = 'd';
+	if (v & SPAMF_USER)
+		*p++ = 'u';
 	*p = '\0';
 	return buf;
 }
@@ -1060,6 +1065,8 @@ char *spamfilter_inttostring_long(int v)
 			return "QUIT";
 		case SPAMF_DCC:
 			return "DCC";
+		case SPAMF_USER:
+			return "user";
 		default:
 			return "UNKNOWN";
 	}
