@@ -373,3 +373,11 @@
   - As a result, alias[::format]::nick is now called alias[::format]::target to avoid
     confusion. ::nick is maintained for backwards compatibility.
 - Fixed a problem where IsupportAdd did not return a value.
+- Module coders: Added HOOKTYPE_REMOTE_JOIN, HOOKTYPE_REMOTE_PART, HOOKTYPE_REMOTE_KICK (all
+  work just the same as the HOOKTYPE_LOCAL_* variants).
+- Module coders: HOOKTYPE_REMOTE_CONNECT is now also called during net-merge. You can use
+  IsSynched(sptr->srvptr) to find out if it's called due to a net merge (0) or a connect (1).
+- Added spamfiler 'user' (u) target. This regex is checked against nick!user@host:realname
+  when a user connects. This makes it easy to ban drones with simple patterns.
+  For example: '/spamfilter add u gzline 86400 Drone[0-9]+!.+@.+:Drone[0-9]'
+  would kill any drones that have both a nick and realname with 'Drone' followed by digits.
